syntax = "proto3";

option csharp_namespace = "TI5yncronizer.Client";

package auth;

service Auth {
  rpc SignIn (SignInRequest) returns (SignInReply);
  rpc SignOut (SignOutRequest) returns (SignOutReply);
}

message SignInRequest {
  string user = 1;
  string password = 2;
  string host = 3;
}

message SignInReply {
  string session_id = 1;
}

message SignOutRequest {
}

message SignOutReply {
}
